# tpg_ship_sim

./: .gitignore  README.md  main.py  main_optimize.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
conf/: config.yaml
customisation_examples/: main_cmbase.py  main_optimize_MCH.py  main_optimize_gasoline.py  main_optimize_methan.py  main_optimize_methanol.py
data/typhoon_path/: combined_typhoon_data_2017-2023.csv  combined_typhoon_data_2019-2023.csv  combined_typhoon_data_2021-2023.csv  create_filtered_typhoon_path.py  create_sim_typhoon_path.py  create_typhoon_path_cluster.py  generated_typhoon_data_2023_6_interval_tynum10.csv  generated_typhoon_data_2023_6_interval_tynum11.csv  generated_typhoon_data_2023_6_interval_tynum12.csv  generated_typhoon_data_2023_6_interval_tynum13.csv  generated_typhoon_data_2023_6_interval_tynum16.csv  generated_typhoon_data_2023_6_interval_tynum18.csv  generated_typhoon_data_2023_6_interval_tynum20.csv  generated_typhoon_data_2023_6_interval_tynum5.csv  generated_typhoon_data_2023_6_interval_tynum6.csv  generated_typhoon_data_2023_6_interval_tynum7.csv  generated_typhoon_data_2023_6_interval_tynum8.csv  generated_typhoon_data_2023_6_interval_tynum9.csv  typhoon_data_2012_6_interval.csv  typhoon_data_2013_6_interval.csv  typhoon_data_2014_6_interval.csv  typhoon_data_2015_6_interval.csv  typhoon_data_2016_6_interval.csv  typhoon_data_2017_6_interval.csv  typhoon_data_2018_6_interval.csv  (+5 more)
tpg_ship_sim/: simulator.py  simulator_cmbase.py  simulator_optimize.py  utils.py
tpg_ship_sim/model/: base.py  (+3 more)
(+12 files in other folders)
