[project]
name = "tpg-ship-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Taiga MITSUYUKI",email = "mitsuyuki-taiga-my@ynu.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "cartopy (>=0.24.1,<0.25.0)",
    "pytz (>=2025.2,<2026.0)",
    "polars (>=1.29.0,<2.0.0)",
    "scienceplots (>=2.1.1,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

